# pdfgen

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerhub.dockerfile  Jenkinsfile  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  nais.yaml  naiserator.yaml  pom.xml  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: analyze.yml  build.yml  deploy.yml  devdeploy.yml  pull-requests.yml  release-drafter.yaml  release-drafter.yml  release-image.yml  release-please.yaml  test.yml  update-gradle-wrapper.yml
gradle/wrapper/: gradle-wrapper.properties
src-rs/: config.rs  main.rs  metrics.rs  pdf.rs  state.rs  template.rs  typst_world.rs
src-rs/routes/: html.rs  mod.rs  nais.rs  pdf.rs
src/main/kotlin/no/nav/pdfgen/: Table.kt  (+11 more)
src/main/resources/: Helpers.js  logback-remote-debug.xml  logback-remote.xml  logback-test.xml  logback.xml
src/main/resources/fonts/: config.json
src/test/resources/: logback-test.xml
src/test/resources/helper_templates/: contains.hbs
templates/dsopkontroll/: kontrollforespoersel.hbs
templates/pale/: behandlingsvedlegg.hbs  fagmelding.hbs  fagmelding_header.hbs
templates/paop/: oppfoelgingsplan.hbs
templates/syfosm/: syfosm.hbs
templates/syfosoknader/: annetarbeidsforhold.hbs  arbeidsledig.hbs  arbeidstakere.hbs  selvstendignaeringsdrivende.hbs  sykepengerutland.hbs
templates/syfosoknader/partials/: base.hbs  spmpartial.hbs  style.hbs
travis_scripts/: docker_push
(+59 files in other folders)
